<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="btnAddColour">Add New Colour</string>
    <string name="enter_new_colour">Enter new colour</string>
    <string name="enter_position_number">Enter position number</string>
    <string name="remove_a_colour">Remove a Colour</string>
    <string name="update_a_colour">Update a Colour</string>
</resources>